# sanskrit-ocr

./: .dockerignore  Cargo.toml  DOCKER.md  Dockerfile
public/: index.html
src/: main.rs
