[package]
name = "sanskrit-ocr"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-multipart = "0.7.2"
actix-files = "0.6.9"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
uuid = { version = "1.19.0", features = ["v4"] }
futures-util = "0.3.31"
parking_lot = "0.12.5"
